Add tozeckendorf / fromzeckendorf

--- a/Changes
+++ b/Changes
@@ -47,6 +47,8 @@ Revision history for Perl module Math::Prime::Util
     - submod(a, b, n)                 a - b mod n
     - rootmod(a, k, n)                modular k-th root
     - vecequal(\@a, \@b)              compare two arrays for equality
+    - tozeckendorf(n)                 Zeckendorf binary string from n
+    - fromzeckendorf(str)             n from Zeckendorf binary string
 
     [FIXES]
 
