--- a/TODO
+++ b/TODO
@@ -319,7 +319,7 @@
 
 - any way to make non-GMP random_strong_prime faster
 
-- test and use sum_primes128
+- sum_primes128, try using Meissel.
 
 - Speed up XS RiemannR with quadmath.
 
