Redo prime count cache, and split out and improve legendre phi

--- a/Changes
+++ b/Changes
@@ -106,6 +106,11 @@ Revision history for Perl module Math::Prime::Util
 
     - sum_primes faster for some inputs.
 
+    - Rewrote legendre_phi and removed code duplication.  Faster.
+
+    - Rewrote prime count caching and removed code duplication.
+      Uses less memory at large sizes and is faster.
+
 
 0.73 2018-11-15
 
