--- a/Changes
+++ b/Changes
@@ -62,6 +62,7 @@ Revision history for Perl module Math::Prime::Util
     - prime_power_count(n)            count of prime powers <= n
     - smooth_count(n,k)               count of k-smooth numbers <= n
     - rough_count(n,k)                count of k-rough numbers <= n
+    - is_sum_of_squares(n,[k])        can n be a sum of k squares (dflt k=2)
     - allsqrtmod(a,n)                 all square roots of a (mod n)
     - qnr(n)                          least quadratic non-residue
     - binomialmod(n,k,m)              fast binomial(n,k) mod m
